Morse-Name-Wayne/MorseName/bin/Release/MorseName.app/Contents/Frameworks/SGSDK.framework/Versions/3.0/Headers/SGSDK.h

#define SGSDK
animation sg_Animation_CreateAnimation(int identifier, void *frames, int withSound);
animation sg_Animation_CreateAnimationNamed(char *identifier, void *frames);
animation sg_Animation_CreateAnimationNamedWithSound(char *identifier, void *frames, int withSound);
animation sg_Animation_CreateAnimationWithSound(int identifier, void *frames);
void sg_Animation_DrawAnimation(void *ani, void *bmp, int x, int y);
void sg_Animation_DrawAnimationAtPoint(void *ani, void *bmp, point2d *pt);
void sg_Animation_DrawAnimationOnScreen(void *ani, void *bmp, int x, int y);
void sg_Animation_DrawAnimationOnScreenAtPt(void *ani, void *bmp, point2d *pt);
void sg_Animation_DrawAnimationOntoDest(void *dest, void *ani, void *bmp, int x, int y);
void sg_Animation_DrawAnimationOntoDestAtPt(void *dest, void *ani, void *bmp, point2d *pt);
void sg_Animation_FreeAnimation(animation ani);
void sg_Animation_FreeAnimationTemplate(animation_template framesToFree);
int sg_Animation_HasAnimationTemplate(char *name);
animation_template sg_Animation_LoadAnimationTemplate(char *filename);
animation_template sg_Animation_MapAnimationTemplate(char *name, char *filename);
void sg_Animation_ReleaseAllAnimationTemplates();
void sg_Animation_ReleaseAnimationTemplate(char *name);
void sg_Animation_ResetAnimation(void *anim);
void sg_Animation_ResetAnimationWithSound(void *anim, int withSound);
void sg_Animation_UpdateAnimation(void *anim);
void sg_Animation_UpdateAnimationPct(void *anim, float pct);
void sg_Animation_UpdateAnimationPctAndSound(void *anim, float pct, int withSound);
int sg_Audio_AudioReady();
void sg_Audio_CloseAudio();