ScreenSaver/lib/sgsdk.pas

  
  function sg_Animation_CreateAnimation(identifier: LongInt; frames: AnimationTemplate; withSound: Boolean): Animation; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_CreateAnimation');
    {$ENDIF}
    
    try
      result := sgAnimations.CreateAnimation(identifier, frames, withSound);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_CreateAnimation');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_CreateAnimation');
    {$ENDIF}
  end;
  
  function sg_Animation_CreateAnimationNamed(identifier: PChar; frames: AnimationTemplate): Animation; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_CreateAnimationNamed');
    {$ENDIF}
    
    try
      result := sgAnimations.CreateAnimation(identifier, frames);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_CreateAnimationNamed');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_CreateAnimationNamed');
    {$ENDIF}
  end;
  
  function sg_Animation_CreateAnimationNamedWithSound(identifier: PChar; frames: AnimationTemplate; withSound: Boolean): Animation; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_CreateAnimationNamedWithSound');
    {$ENDIF}
    
    try
      result := sgAnimations.CreateAnimation(identifier, frames, withSound);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_CreateAnimationNamedWithSound');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_CreateAnimationNamedWithSound');
    {$ENDIF}
  end;
  
  function sg_Animation_CreateAnimationWithSound(identifier: LongInt; frames: AnimationTemplate): Animation; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_CreateAnimationWithSound');
    {$ENDIF}
    
    try
      result := sgAnimations.CreateAnimation(identifier, frames);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_CreateAnimationWithSound');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_CreateAnimationWithSound');
    {$ENDIF}
  end;
  
  procedure sg_Animation_DrawAnimation(ani: Animation; bmp: Bitmap; x: LongInt; y: LongInt); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_DrawAnimation');
    {$ENDIF}
  
    try 
      sgAnimations.DrawAnimation(ani, bmp, x, y);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_DrawAnimation');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_DrawAnimation');
    {$ENDIF}
  end;
  
  procedure sg_Animation_DrawAnimationAtPoint(ani: Animation; bmp: Bitmap; var pt: Point2D); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_DrawAnimationAtPoint');
    {$ENDIF}
  
    try 
      sgAnimations.DrawAnimation(ani, bmp, pt);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_DrawAnimationAtPoint');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_DrawAnimationAtPoint');
    {$ENDIF}
  end;
  
  procedure sg_Animation_DrawAnimationOnScreen(ani: Animation; bmp: Bitmap; x: LongInt; y: LongInt); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_DrawAnimationOnScreen');
    {$ENDIF}
  
    try 
      sgAnimations.DrawAnimationOnScreen(ani, bmp, x, y);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_DrawAnimationOnScreen');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_DrawAnimationOnScreen');
    {$ENDIF}
  end;
  
  procedure sg_Animation_DrawAnimationOnScreenAtPt(ani: Animation; bmp: Bitmap; var pt: Point2D); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_DrawAnimationOnScreenAtPt');
    {$ENDIF}
  
    try 
      sgAnimations.DrawAnimationOnScreen(ani, bmp, pt);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_DrawAnimationOnScreenAtPt');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_DrawAnimationOnScreenAtPt');
    {$ENDIF}
  end;
  
  procedure sg_Animation_DrawAnimationOntoDest(dest: Bitmap; ani: Animation; bmp: Bitmap; x: LongInt; y: LongInt); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_DrawAnimationOntoDest');
    {$ENDIF}
  
    try 
      sgAnimations.DrawAnimation(dest, ani, bmp, x, y);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_DrawAnimationOntoDest');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_DrawAnimationOntoDest');
    {$ENDIF}
  end;
  
  procedure sg_Animation_DrawAnimationOntoDestAtPt(dest: Bitmap; ani: Animation; bmp: Bitmap; var pt: Point2D); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_DrawAnimationOntoDestAtPt');
    {$ENDIF}
  
    try 
      sgAnimations.DrawAnimation(dest, ani, bmp, pt);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_DrawAnimationOntoDestAtPt');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_DrawAnimationOntoDestAtPt');
    {$ENDIF}
  end;
  
  procedure sg_Animation_FreeAnimation(var ani: Animation); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_FreeAnimation');
    {$ENDIF}
  
    try 
      sgAnimations.FreeAnimation(ani);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_FreeAnimation');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_FreeAnimation');
    {$ENDIF}
  end;
  
  procedure sg_Animation_FreeAnimationTemplate(var framesToFree: AnimationTemplate); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_FreeAnimationTemplate');
    {$ENDIF}
  
    try 
      sgAnimations.FreeAnimationTemplate(framesToFree);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_FreeAnimationTemplate');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_FreeAnimationTemplate');
    {$ENDIF}
  end;
  
  function sg_Animation_HasAnimationTemplate(name: PChar): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_HasAnimationTemplate');
    {$ENDIF}
    
    try
      result := sgAnimations.HasAnimationTemplate(name);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_HasAnimationTemplate');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_HasAnimationTemplate');
    {$ENDIF}
  end;
  
  function sg_Animation_LoadAnimationTemplate(filename: PChar): AnimationTemplate; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_LoadAnimationTemplate');
    {$ENDIF}
    
    try
      result := sgAnimations.LoadAnimationTemplate(filename);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_LoadAnimationTemplate');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_LoadAnimationTemplate');
    {$ENDIF}
  end;
  
  function sg_Animation_MapAnimationTemplate(name: PChar; filename: PChar): AnimationTemplate; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_MapAnimationTemplate');
    {$ENDIF}
    
    try
      result := sgAnimations.MapAnimationTemplate(name, filename);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_MapAnimationTemplate');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_MapAnimationTemplate');
    {$ENDIF}
  end;
  
  procedure sg_Animation_ReleaseAllAnimationTemplates(); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_ReleaseAllAnimationTemplates');
    {$ENDIF}
  
    try 
      sgAnimations.ReleaseAllAnimationTemplates();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_ReleaseAllAnimationTemplates');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_ReleaseAllAnimationTemplates');
    {$ENDIF}
  end;
  
  procedure sg_Animation_ReleaseAnimationTemplate(name: PChar); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_ReleaseAnimationTemplate');
    {$ENDIF}
  
    try 
      sgAnimations.ReleaseAnimationTemplate(name);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_ReleaseAnimationTemplate');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_ReleaseAnimationTemplate');
    {$ENDIF}
  end;
  
  procedure sg_Animation_ResetAnimation(anim: Animation); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_ResetAnimation');
    {$ENDIF}
  
    try 
      sgAnimations.RestartAnimation(anim);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_ResetAnimation');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_ResetAnimation');
    {$ENDIF}
  end;
  
  procedure sg_Animation_ResetAnimationWithSound(anim: Animation; withSound: Boolean); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_ResetAnimationWithSound');
    {$ENDIF}
  
    try 
      sgAnimations.RestartAnimation(anim, withSound);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_ResetAnimationWithSound');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_ResetAnimationWithSound');
    {$ENDIF}
  end;
  
  procedure sg_Animation_UpdateAnimation(anim: Animation); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_UpdateAnimation');
    {$ENDIF}
  
    try 
      sgAnimations.UpdateAnimation(anim);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_UpdateAnimation');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_UpdateAnimation');
    {$ENDIF}
  end;
  
  procedure sg_Animation_UpdateAnimationPct(anim: Animation; pct: Single); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_UpdateAnimationPct');
    {$ENDIF}
  
    try 
      sgAnimations.UpdateAnimation(anim, pct);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_UpdateAnimationPct');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_UpdateAnimationPct');
    {$ENDIF}
  end;
  
  procedure sg_Animation_UpdateAnimationPctAndSound(anim: Animation; pct: Single; withSound: Boolean); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Animation_UpdateAnimationPctAndSound');
    {$ENDIF}
  
    try 
      sgAnimations.UpdateAnimation(anim, pct, withSound);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Animation_UpdateAnimationPctAndSound');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Animation_UpdateAnimationPctAndSound');
    {$ENDIF}
  end;
  
  function sg_Audio_AudioReady(): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_AudioReady');
    {$ENDIF}
    
    try
      result := sgAudio.AudioReady();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_AudioReady');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_AudioReady');
    {$ENDIF}
  end;
  
  procedure sg_Audio_CloseAudio(); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_CloseAudio');
    {$ENDIF}
  
    try 
      sgAudio.CloseAudio();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_CloseAudio');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_CloseAudio');
    {$ENDIF}
  end;
